--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
-        <finalName>webbservice-app</finalName>
+        <finalName>webservice-app</finalName>
     </build>
 
 
