--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.data.mongodb.uri=mongodb+srv://kerim:Kerimadmin@cluster0.ltvllqv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.database=Cluster0
+server.port= 5000
+```
