Added Sql to connect to AWS RDS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,24 @@
-spring.data.mongodb.uri=mongodb+srv://kerim:Kerimadmin@cluster0.ltvllqv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-spring.data.mongodb.database=Cluster0
-server.port= 5000
+#spring.data.mongodb.uri=mongodb+srv://kerim:Kerimadmin@cluster0.ltvllqv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+#spring.data.mongodb.database=Cluster0
+#server.port= 5000
+
+
+#Datasource at AWS
+spring.datasource.url=jdbc:mysql://aws-sql-db.ctc6mqa8c0sz.eu-north-1.rds.amazonaws.com:3306/bookstore
+
+## The default username
+spring.datasource.username=root
+
+## The default password
+spring.datasource.password=Kerimadmin
+
+#Hibernate
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+
+
 ```
