--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 
 
 #Datasource at AWS
-spring.datasource.url=jdbc:mysql://aws-sql-db.ctc6mqa8c0sz.eu-north-1.rds.amazonaws.com:3306/bookstore
+spring.datasource.url=jdbc:mysql://aws-sql-db.ctc6mqa8c0sz.eu-north-1.rds.amazonaws.com:3306/aws-sql-db
 
 ## The default username
 spring.datasource.username=root
@@ -19,6 +19,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
+
 
 
 ```
