--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #spring.data.mongodb.uri=mongodb+srv://kerim:Kerimadmin@cluster0.ltvllqv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 #spring.data.mongodb.database=Cluster0
-#server.port= 5000
+server.port= 5000
 
 
 #Datasource at AWS
