--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '21'
+          distribution: 'temurin'  # Specify the distribution, e.g., 'adopt' or 'temurin'
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
